--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tempapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dips997.github.io/ReactWeather.com",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
