--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tempapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dips997.github.io/ReactWeather.com",
+  "homepage": "https://dips997.github.io/ReactWeatherApp",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
@@ -16,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
